Version 1.0.5.1:
- Release date:
- New features:
- Improvements:
- Fixed bugs:


Version 1.0.4.1:
- Release date: 27 Nov 2017
- New features:
	- added CPPDEVTK_NOEXCEPT
	- added exception propagation
	- added thread (not available on iOS < 9.0 and Mac OS X < 10.7 because __thread is not supported)
	- added interruption support to condition variable
	- added interruption support to semaphore
- Improvements:
	- Kubuntu: updated Qt to 5.9.2
	- moved EnableIf and IfThenElse as Conditional in type_traits.hpp
	- added more std exception classes equivalents
	- treat warning "not all control paths return a value" as error
	- uniform error reporting/handling in synchronization primitives
	- added time utils
	- removed sleep.hpp (replaced by this_thread sleep API)
	- enabled console test apps on Android and iOS
- Fixed bugs:
	- fixed internal pthread_mutex_timedlock(): absTime instead of relTime


Version 1.0.3.1:
- Release date: 17 Oct 2017
- New features:
	- added generic locking algorithms
	- added condition variable
	- added semaphore
	- android: added GetFilesDirPath()
- Improvements:
	- mutex review/cleanup
	- increased iOS minimum version from 6.0 to 8.0
	- internal support XCode 8 & 9
	- Mac + Win: relaxed IsValidPath()
- Fixed bugs:


Version 1.0.2.1:
- Release date: 31 Jul 2017
- New features:
	- made public on GitHub: https://github.com/cososys/cppdevtk
- Improvements:
	- packaging cleanup
	- JNI review
	- enabled JNI on Win32
- Fixed bugs:
	- mutex impl .NET workaround: use QMutex even if std mutex available; maybe pImpl in the future


Version 1.0.1.1:
- Release date: 3 Jul 2017
- New features:
	- Debian based packaging
	- require C++11 enabled for clang and gcc >= 4.3.0
- Improvements:
	- Made ThrowOutOfMemoryErrorOrAbort() public
	- mutex impl: use std mutex if available
- Fixed bugs:
	- fixed check Qt allowed version


Version 1.0.0.1:
- Release date: 22 May 2017
- New features:
- Improvements:
- Fixed bugs: