@@ -2,6 +2,7 @@ Version 1.0.5.1:
 - Release date:
 - New features:
 - Improvements:
+	- this_thread Yield(), SleepFor() and SleepUntil() available even if !CPPDEVTK_HAVE_THREAD_STORAGE
 - Fixed bugs:
 
 
